# swift-corelibs-libdispatch

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  INSTALL.md  Makefile.am  PATCHES  README.md  TESTING.md  _config.yml  autogen.sh  build-android  build-android-cmake  build-android-test  build.atpkg  configure.ac  index.md  news.md  styles.css  tutorial.md
_includes/: navbar.html
_layouts/: default.html
_posts/: 2009-09-10-libdispatch-is-open-source.md  2009-10-21-libdispatch-on-freebsd.md  2010-05-14-apache-mpm-sample-code.md
anarchy/: atbuild  build.sh  linux.modulemap  osx.modulemap
cmake/: config.h.in  libdispatch.pc.in
compat/: Availability.h  fd_copy.h  malloc_zone.h  private_extern.h
config/: config.h
dispatch/: CMakeLists.txt  Dispatch.apinotes  Makefile.am  base.h  benchmark.h  block.h  data.h  dispatch-vfs.yaml.in  dispatch.h  group.h  introspection.h  io.h  module.map  module.modulemap  object.h  once.h  queue.h  semaphore.h  source.h  time.h  workloop.h
dispatch/darwin/: module.modulemap
dispatch/generic/: module.modulemap
dispatch/generic_static/: module.modulemap
libdispatch.xcodeproj/: project.pbxproj
m4/: blocks.m4  private-extern.m4
man/: CMakeLists.txt  Makefile.am  dispatch.3  dispatch_after.3  dispatch_api.3  dispatch_apply.3  dispatch_async.3  dispatch_benchmark.3  dispatch_data_create.3  dispatch_group_create.3  dispatch_io_create.3  dispatch_object.3  dispatch_once.3  dispatch_queue_create.3  dispatch_read.3  dispatch_semaphore_create.3  dispatch_source_create.3  dispatch_time.3
os/: CMakeLists.txt  Makefile.am  base.h  clock.h  eventlink_private.h  firehose_buffer_private.h  firehose_server_private.h  generic_base.h  generic_unix_base.h  generic_win_base.h  linux_base.h  object.h  object_private.h  stubs.h  voucher_activity_private.h  voucher_private.h  workgroup_interval.h  workgroup_interval_private.h  workgroup_object.h  workgroup_object_private.h  workgroup_parallel.h  workgroup_private.h
private/: CMakeLists.txt  Makefile.am  apply_private.h  benchmark.h  channel_private.h  data_private.h  dispatch.h  introspection_private.h  io_private.h  layout_private.h  mach_private.h  private.h  queue_private.h  source_private.h  swift_concurrency_private.h  time_private.h  voucher_activity_private.h  voucher_private.h  workloop_private.h
private/darwin/: module.modulemap
private/generic/: module.modulemap
resolver/: resolved.h  resolver.c
src/: .gitignore  CMakeLists.txt  Makefile.am  allocator.c  allocator_internal.h  apply.c  benchmark.c  benchmark.h  block.cpp  data.c  data.m  data_internal.h  eventlink.c  eventlink_internal.h  hw_shims.h  init.c  inline_internal.h  internal.h  introspection.c  introspection_internal.h  io.c  io_internal.h  kevent_internal.h  legacy.c  legacy.h  libdispatch.codes  libdispatch.plist  mach.c  mach_internal.h  object.c  object.m  object_internal.h  once.c  os_shims.h  private.h  protocol.defs  provider.d  queue.c  queue_internal.h  queue_kevent.c  (+29 more)
src/BlocksRuntime/: Block.h  Block_private.h  BlocksRuntime.def  CMakeLists.txt  data.c  runtime.c
src/event/: event.c  event_config.h  event_epoll.c  event_internal.h  event_kevent.c  event_windows.c  workqueue.c  workqueue_internal.h
src/exclavekit/: internal.h  once.c
src/exclavekit/dispatch/: dispatch.h  module.modulemap  object.h  once.h
src/firehose/: firehose.defs  firehose_buffer.c  firehose_buffer_internal.h  firehose_inline_internal.h  firehose_internal.h  firehose_reply.defs  firehose_server.c  firehose_server_internal.h  firehose_server_object.m  firehose_types.defs
src/shims/: android_membarrier.h  android_stubs.h  atomic.h  atomic_sfb.h  generic_sys_queue.h  generic_unix_stubs.c  generic_unix_stubs.h  generic_win_stubs.c  generic_win_stubs.h  getprogname.c  getprogname.h  hw_config.h  linux_stubs.c  linux_stubs.h  lock.c  lock.h  mach.c  mach.h  malloc_zone.h  perfmon.h  priority.h  pthread_main_np.h  sys_queue.h  target.h  time.c  time.h  tsd.c  tsd.h  yield.c  yield.h
src/swift/: Block.swift  CMakeLists.txt  Data.swift  Dispatch.apinotes  Dispatch.swift  DispatchStubs.cc  IO.swift  Parallel.swift  Private.swift  Queue.swift  Source.swift  Time.swift  Wrapper.swift  module.map.in  swift_wrappers.c
src/swift/shims/: DispatchOverlayShims.h  module.modulemap
testing/: Makefile  Makefile.am  Makefile.darwin  bench.mm  bsdtestharness.c  bsdtests.c  bsdtests.h  cffd.c  dispatch_after.c  dispatch_api.c  dispatch_apply.c  dispatch_apply_gc.m  dispatch_c99.c  dispatch_cascade.c  dispatch_cffd.c  dispatch_concur.c  dispatch_data.c  dispatch_deadname.c  dispatch_debug.c  dispatch_drift.c  dispatch_group.c  dispatch_io.c  dispatch_overcommit.c  dispatch_pingpong.c  dispatch_priority.c  dispatch_proc.c  dispatch_queue_finalizer.c  dispatch_read.c  dispatch_readsync.c  dispatch_sema.c  dispatch_starfish.c  dispatch_suspend_timer.c  dispatch_sync_on_main.c  dispatch_test.c  dispatch_test.h  dispatch_timer.c  dispatch_timer_bit31.c  dispatch_timer_bit63.c  dispatch_timer_set_time.c  dispatch_vm.c  (+6 more)
testing/shims/: arc4random.c  fgetln.c
tests/: .gitignore  CMakeLists.txt  Makefile.am  bsdtestharness.c  bsdtests.c  bsdtests.h  bsdtestsummarize.c  cffd.c  dispatch_after.c  dispatch_api.c  dispatch_apply.c  dispatch_c99.c  dispatch_cascade.c  dispatch_cf_main.c  dispatch_concur.c  dispatch_context_for_key.c  dispatch_data.c  dispatch_deadname.c  dispatch_debug.c  dispatch_drift.c  dispatch_group.c  dispatch_io.c  dispatch_io_muxed.c  dispatch_io_net.c  dispatch_io_pipe.c  dispatch_io_pipe_close.c  dispatch_overcommit.c  dispatch_pingpong.c  dispatch_plusplus.cpp  dispatch_priority.c  dispatch_proc.c  dispatch_queue_finalizer.c  dispatch_read.c  dispatch_read2.c  dispatch_readsync.c  dispatch_select.c  dispatch_sema.c  dispatch_starfish.c  dispatch_suspend_timer.c  dispatch_sync_gc.m  (+19 more)
tests/Foundation/: bench.mm  dispatch_apply_gc.m  nsoperation.m
ticket/: 1.md  2.md  207.md  35.md  36.md  37.md  38.md
tools/: dispatch_trace.d  firehose_trace.lua  voucher_trace.d
xcodeconfig/: libdispatch-dyld-stub.xcconfig  libdispatch.clean  (+18 more)
(+50 files in other folders)
